--- a/slides/01-slides-rmarkdown.html
+++ b/slides/01-slides-rmarkdown.html
@@ -1,32 +1,391 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Introdução ao RMarkdown</title>
+    <title>Introdução aos Relatórios Automáticos</title>
     <meta charset="utf-8" />
     <meta name="author" content="" />
     <script src="libs/header-attrs-2.9/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/custom-intro.css" type="text/css" />
-    <link rel="stylesheet" href="css/xaringan-themer.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# Introdução ao RMarkdown
-## Athos Petri Damiani
+# Introdução aos Relatórios Automáticos
+## com RMarkdown
 ### <img src = 'https://jedis.asn.rocks/pluginfile.php/1/theme_edumy/headerlogo1/1604959123/ASN_Logo_Site_Vertical%20-%20Copy1.png' width = '20%'>
 ### Junho de 2021
 
 ---
 
 
+
+
+
+
+
+
+
+
+
+class: middle, center
+
+# .blue[Introdução]
+
+---
+# O que é RMarkdown?
+
+- O R Markdown é um pacote para criação de __relatórios automatizados__ utilizando as linguagens de programação R e de marcação Markdown. 
+
+&gt; Linguagens de marcação utilizam marcadores (símbolos, tags, funções) para formatar um arquivo de texto simples. Os exemplos mais famosos de linguagem de marcação são o HTML e LaTeX.
+
+- A linguagem de marcação Markdown serve para construirmos e formatarmos diversos formatos de arquivos (PDF, HTML, Word, entre outros) a partir de um arquivo de texto com regras bem simples. 
+
+- O __RMarkdown__ é uma extensão de Markdown que nos permite __colocar código de R__.
+
+
+---
+## Por que o RMarkdown é legal?
+
+- Possibilita automatizar a criar produtos com o R. Construindo um relatório em RMarkdown, com exceção das interpretações e conclusões, só precisamos montá-lo uma vez. A partir daí, com apenas um clique podemos:
+
+  - replicar o relatório para diversas versões da base de dados (modificações, correções, processos periódicos);
+
+  - replicar o relatório para diversas variáveis.
+  
+.pull-left[
+- Criar documentos reprodutíveis
+
+- Criar diversos tipos de produtos 
+]
+
+.pull-right[
+&lt;div class="figure" style="text-align: center"&gt;
+&lt;img src="https://github.com/allisonhorst/stats-illustrations/blob/master/rstats-artwork/reproducibility_court.png?raw=true" alt="Ilustração por &amp;lt;a href='https://github.com/allisonhorst/stats-illustrations'&amp;gt; Allison Horst&amp;lt;/a&amp;gt;." width="100%" /&gt;
+&lt;p class="caption"&gt;Ilustração por &lt;a href='https://github.com/allisonhorst/stats-illustrations'&gt; Allison Horst&lt;/a&gt;.&lt;/p&gt;
+&lt;/div&gt;
+]
+
+
+
+
+
+
+
+---
+
+# Algumas aplicações
+
+
+|Pacote                                           |O que podemos fazer? |Exemplos                                                                                                                                                                                         |
+|:------------------------------------------------|:--------------------|:------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+|[blogdown](https://bookdown.org/yihui/blogdown/) |Blogs e sites        |- [Site da Curso-R](https://curso-r.com/) &lt;br&gt; - [Site da Associação Brasileira de Jurimetria (ABJ)](https://abj.org.br/)                                                                        |
+|[distill](https://rstudio.github.io/distill/)    |Blogs e sites        |- [RStudio AI Blog](https://blogs.rstudio.com/ai/) &lt;br&gt; - [Laboratório da Associação Brasileira de Jurimetria (ABJ)](https://lab.abj.org.br/)                                                    |
+|[bookdown](https://bookdown.org/)                |Livros               |- [Livro Ciência de Dados em R](https://livro.curso-r.com/) &lt;br&gt; - [R for Data Science](https://r4ds.had.co.nz/)                                                                                 |
+|[xaringan](https://github.com/yihui/xaringan)    |Apresentações        |- Essa apresentação (e todas as usadas nos cursos da Curso-R) &lt;br&gt; - [Build Your Own Universe - Garrick Aden-Buie &amp; Travis Gerke](https://www.garrickadenbuie.com/talk/build-your-own-universe/) |
+---
+
+# Algumas aplicações
+
+
+|Pacote                                                        |O que podemos fazer?                      |Exemplos                                                                                                                                                                                                                                                                                                                        |
+|:-------------------------------------------------------------|:-----------------------------------------|:-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+|[pagedown](https://github.com/rstudio/pagedown)               |Currículos, cartas e trabalhos acadêmicos |- [Relatório do Observatório da Insolvência](https://abjur.github.io/obsFase2/relatorio/obs_recuperacoes_abj.pdf) &lt;br&gt; - [Mestrado do Athos Damiani (em andamento)](https://github.com/Athospd/mestrado/blob/master/inst/monografia/monografia.pdf) &lt;br&gt; - [Currículo do William Amorim](https://williamorim.github.io/resume/) |
+|[flexdashboard](https://rmarkdown.rstudio.com/flexdashboard/) |Dashboards                                |- [Tesouro Nacional: Análises sobre SICONF: Despesas com educação x IDEB](https://analise-siconfi-ideb.tesouro.gov.br/)                                                                                                                                                                                                         |
+|[learnr](https://rstudio.github.io/learnr/)                   |Tutoriais interativos                     |- [Text mining with tidy data principles](https://juliasilge.shinyapps.io/learntidytext/) &lt;br&gt; - [Teacups, Giraffes,  &amp; Statistics](https://tinystats.github.io/teacups-giraffes-and-statistics/)                                                                                                                               |
+|[rticles](https://github.com/rstudio/rticles)                 |Artigos científicos                       |                                                                                                                                                                                                                                                                                                                                |
+|                                                              |Outros exemplos                           |[Newsletter Garimpo](https://nucleo.jor.br/newsletters/garimpo)                                                                                                                                                                                                                                                                 |
+
+---
+
+# Estrutura
+
+Todo arquivo RMarkdown terá a seguinte estrutura:
+
+--
+
+.pull-left[
+
+- Um preâmbulo com configurações
+]
+
+.pull-right[
+
+
+```yaml
+---
+title: "Relatório maravilhoso"
+*output: html_document
+---
+```
+
+]
+
+--
+
+.pull-left[
+
+- Blocos de texto (em Markdown)
+
+]
+
+.pull-right[
+
+````md
+*Texto em __RMarkdown__!
+````
+
+]
+
+--
+
+.pull-left[
+
+- Blocos de código (em R ou outra linguagem)
+
+]
+
+.pull-right[
+
+
+````md
+```{r}
+*print("ola, codigo R")
+```
+````
+
+]
+
+--
+
+&gt; Isso é uma citação e é feito começando a frase com um '&gt;'.
+---
+
+# GIFs
+
+
+```r
+knitr::include_graphics("img/cat.gif")
+```
+
+&lt;img src="img/cat.gif" style="display: block; margin: auto;" /&gt;
+
+---
+
+# Sintaxe
+
+
+Principais marcadores utilizados para formatar texto:
+
+- uma palavra entre asteriscos fica em itálico: `*texto*` é transformado em *texto*
+
+- uma palavra entre dois asteríscos fica em negrito: `**texto**` é transformado em **texto**
+
+- um ou mais hashtags viram títulos: `# Título muito grande`, `## Título grande`, `### Título médio`, `#### Título pequeno`, `##### Título muito pequeno`
+
+- hiperlinks podem ser criados com a estrutura `[texto](link)`: 
+
+- `[link para o site da Curso-R](https://curso-r.com)` é transformado em [link para o site da Curso-R](https://curso-r.com).
+
+- para deixar o texto com `esse formato` (formato de código), apenas coloque o texto entre duas crases.
+
+
+Material de consulta: [Livro: Ciência de Dados em R - Seção sobre Markdown](https://livro.curso-r.com/9-1-markdown.html)
+
+---
+
+# Chunks
+
+
+- Em um arquivo R Markdown, precisamos escrever nossos códigos dentro dos *chunks*. Para inserir um chunk, utilize o atalho `CTRL + ALT + I`.
+
+- É possível adicionar campos de código utilizando a seguinte sintaxe:
+
+````md
+```{r}
+codigo em R aqui
+```
+````
+
+- Dentro dos chunks você poderá escrever códigos em R como se fosse o nosso script .R tradicional. 
+
+
+Material de consulta: [Livro: Ciência de Dados em R - Seção sobre R Markdown](https://livro.curso-r.com/9-2-r-markdown.html)
+
+---
+
+# Yaml
+
+- Os arquivos .Rmd começam com códigos em yaml.
+
+- Esse "bloco" de código é delimitado por `---`.
+
+- Apresenta metadados e parâmetros utilizados para gerar o documento final.
+
+```yml
+---
+title: "Relatórios automáticos"
+subtitle: "O poder do RMarkdown"
+author: "Curso-R"
+date: "Março de 2021"
+output: xaringan::moon_reader
+---
+```
+
+---
+
+## Knit! 
+
+- Ppara gerarmos o relatório na extensão desejada, precisamos *renderizá-lo*, isto é, transformar o arquivo R Markdown em um PDF, HTML ou Word. 
+
+- Isso pode ser feito no RStudio a partir do botão `knit`, que fica logo acima do script, ou pelo atalho `CTRL + SHIFT + K`.
+
+&lt;div class="figure" style="text-align: center"&gt;
+&lt;img src="https://d33wubrfki0l68.cloudfront.net/ac50fc099900e8dd42fb3858cc9b54b00c3a26a6/25493/articles/images/rmdint-dropdown.png" alt="Fonte: &amp;lt;a href='https://rmarkdown.rstudio.com/articles_integration.html'&amp;gt;RStudio&amp;lt;/a&amp;gt;" width="100%" /&gt;
+&lt;p class="caption"&gt;Fonte: &lt;a href='https://rmarkdown.rstudio.com/articles_integration.html'&gt;RStudio&lt;/a&gt;&lt;/p&gt;
+&lt;/div&gt;
+
+
+---
+class: middle, center
+
+# .blue[Principais saídas]
+
+&lt;div class="figure"&gt;
+&lt;img src="https://r-ladies-sao-paulo.github.io/xaringan/img/markdown.png" alt="&amp;lt;center&amp;gt;&amp;lt;b&amp;gt;Fonte: &amp;lt;a href='https://rmarkdown.rstudio.com'&amp;gt;Pacote `rmarkdown`&amp;lt;/a&amp;gt;&amp;lt;/b&amp;gt;&amp;lt;/center&amp;gt;" width="45%" /&gt;
+&lt;p class="caption"&gt;&lt;center&gt;&lt;b&gt;Fonte: &lt;a href='https://rmarkdown.rstudio.com'&gt;Pacote `rmarkdown`&lt;/a&gt;&lt;/b&gt;&lt;/center&gt;&lt;/p&gt;
+&lt;/div&gt;
+
+&lt;!-- Quero usar essa imagem, mas não está claro se é liberado o uso: https://alison.netlify.app/rmd-valentine/images/rmarkdown_hedgehog_wide.png --&gt;
+
+---
+## Relatórios
+
+
+### HTML
+
+```yml
+output: html_document
+```
+
+### Word (.docx)
+
+```yml
+output: word_document
+```
+
+---
+
+## Relatórios
+
+### PDF (com Tex)
+
+```yml
+output: pdf_document
+```
+
+Caso não tenha o TeX:
+
+
+```r
+tinytex::install_tinytex()
+```
+
+
+---
+
+
+## Relatórios
+
+### PDF com o pacote Pagedown
+
+```yml
+output: html_document
+knit: pagedown::chrome_print
+```
+
+
+Ou utilize a função `pagedown::chrome_print()` em um relatório em HTML:
+
+
+```r
+pagedown::chrome_print("relatorio.html")
+```
+
+---
+
+
+## Apresentações
+
+- **ioslides**
+```yml
+output: ioslides_presentation
+```
+
+- **Slidy**
+```yml
+output: slidy_presentation
+```
+
+- **Beamer** - Necessário o TeX
+```yml
+output: beamer_presentation
+```
+
+- **Powerpoint** 
+```yml
+output: powerpoint_presentation
+```
+
+- **xaringan** 
+```yml
+output: xaringan::moon_reader
+```
+
+---
+
+## Resumo
+
+- Podemos escrever arquivos com código, resultados, textos, imagens, etc. 
+
+- O mesmo conteúdo pode ser disponibilizado em diferentes tipos de saída.
+
+- Nos metadados (`yaml`) do arquivo RMarkdown `.Rmd`, definimos a saída no parâmetro `output`.
+
+- Mais saídas: [RStudio Formats](https://rmarkdown.rstudio.com/formats.html)
+
+---
+# Referências 
+
+## Em Inglês
+
+- [Site do pacote RMarkdown](https://rmarkdown.rstudio.com/)
+  - [Página com diversas referências](https://rmarkdown.rstudio.com/articles.html)
+- [Folha de cola - _cheatsheet_](https://github.com/rstudio/cheatsheets/raw/master/rmarkdown-2.0.pdf)
+- [Livro: _R Markdown: The Definitive Guide_](https://bookdown.org/yihui/rmarkdown/)
+- [Livro: _R Markdown Cookbook_](https://bookdown.org/yihui/rmarkdown-cookbook/)
+- Pessoas para seguir no Twitter:
+  - [Yihui Xie](https://twitter.com/xieyihui)
+  - [Garrick Aden-Buie](https://twitter.com/grrrck) 
+  - [Alison Presmanes Hill](https://twitter.com/apreshill)
+
+
+## Em Português
+
+- [Livro da Curso-R - Capítulo sobre relatórios](https://livro.curso-r.com/9-relatorios.html)
+
+---
+
+## Créditos
+
+Slides feitos com carinho pela Beatriz Milz e pelo William Amorim, professores da Curso-R.
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
-"ratio": "16:9",
+"ratio": "4:3",
 "highlightStyle": "github",
 "highlightLines": true,
 "countIncrementalSlides": false
